--- a/Box Office Revenue Prediction Using Linear Regression/program.ipynb
+++ b/Box Office Revenue Prediction Using Linear Regression/program.ipynb
@@ -516,8 +516,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "d221bf76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 0, 0, 0, 0],\n",
+       "       [1, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 1, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, 1, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 1],\n",
+       "       [0, 0, 1, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vector = CountVectorizer()\n",
+    "vector.fit(dt[\"genres\"])\n",
+    "classifiedGenres = vector.transform(dt['genres']).toarray()\n",
+    "classifiedGenres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "f093f588",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['action', 'animation', 'comedy', 'drama', 'horror', 'thriller'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newGernes = vector.get_feature_names_out()\n",
+    "newGernes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "7c854b10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, n in enumerate(newGernes):\n",
+    "    dt[n] = classifiedGenres[:,1]\n",
+    "dt.drop('genres', axis=1,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "9660dcfa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2694 entries, 0 to 2693\n",
+      "Data columns (total 15 columns):\n",
+      " #   Column            Non-Null Count  Dtype  \n",
+      "---  ------            --------------  -----  \n",
+      " 0   title             2694 non-null   object \n",
+      " 1   domestic_revenue  2694 non-null   float64\n",
+      " 2   world_revenue     2694 non-null   int64  \n",
+      " 3   distributor       2694 non-null   object \n",
+      " 4   opening_revenue   2694 non-null   int64  \n",
+      " 5   opening_theaters  2694 non-null   float64\n",
+      " 6   budget            2694 non-null   int64  \n",
+      " 7   MPAA              2694 non-null   object \n",
+      " 8   release_days      2694 non-null   float64\n",
+      " 9   action            2694 non-null   int64  \n",
+      " 10  animation         2694 non-null   int64  \n",
+      " 11  comedy            2694 non-null   int64  \n",
+      " 12  drama             2694 non-null   int64  \n",
+      " 13  horror            2694 non-null   int64  \n",
+      " 14  thriller          2694 non-null   int64  \n",
+      "dtypes: float64(3), int64(9), object(3)\n",
+      "memory usage: 315.8+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "037875d0",
    "metadata": {},
    "outputs": [],
    "source": []
