--- a/Box Office Revenue Prediction Using Linear Regression/program.ipynb
+++ b/Box Office Revenue Prediction Using Linear Regression/program.ipynb
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 496,
    "id": "6334bfd7",
    "metadata": {},
    "outputs": [
@@ -1344,32 +1344,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training MSE: 0.5110642092420766\n",
-      "Training R²: -0.010937391760289739\n",
-      "Validation MSE: 0.5110642092420766\n",
-      "Validation R²: -0.010937391760289739\n"
+      "MSE: 0.5110642092420766\n",
+      "MAE: 0.5970983228601201\n",
+      "MAPE: 0.08812267200209488\n",
+      "R²: -0.010937391760289739\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, mean_absolute_error, mean_absolute_percentage_error\n",
+    "\n",
     "train_mse = mean_squared_error(yTest, yTestPred)\n",
+    "train_mae = mean_absolute_error(yTest, yTestPred)\n",
+    "train_mape = mean_absolute_percentage_error(yTest, yTestPred)\n",
     "train_r2 = r2_score(yTest, yTestPred)\n",
     "\n",
-    "val_mse = mean_squared_error(yTest, yTestPred)\n",
-    "val_r2 = r2_score(yTest, yTestPred)\n",
-    "\n",
-    "print(\"Training MSE:\", train_mse)\n",
-    "print(\"Training R²:\", train_r2)\n",
-    "\n",
-    "print(\"Validation MSE:\", val_mse)\n",
-    "print(\"Validation R²:\", val_r2)"
+    "print(\"MSE:\", train_mse)\n",
+    "print(\"MAE:\", train_mae)\n",
+    "print(\"MAPE:\", train_mape)\n",
+    "print(\"R²:\", train_r2)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fb37e00",
+   "id": "8634af71",
    "metadata": {},
    "outputs": [],
    "source": []
